<resources>
    <string name="app_name">Assignment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_merge">Merge</string>
    <string name="action_edit_contact">Update Field</string>
    <string name="action_save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="business_email">Business Email</string>
    <string name="business_phone">Business Phone</string>
    <string name="business_mobile">Business Mobile</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="full_name">Full Name</string>
    <string name="genre">Genre</string>
    <string name="job_desc">Job Description</string>
    <string name="job_title">Job Title</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="mobile">Mobile</string>
    <string name="notes">Notes</string>
    <string name="phone">Phone</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
</resources>
